docs/0.18/_sources/api/gammapy.modeling.models.BrokenPowerLawSpectralModel.rst.txt
BrokenPowerLawSpectralModel
===========================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: BrokenPowerLawSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~BrokenPowerLawSpectralModel.amplitude
      ~BrokenPowerLawSpectralModel.covariance
      ~BrokenPowerLawSpectralModel.default_parameters
      ~BrokenPowerLawSpectralModel.ebreak
      ~BrokenPowerLawSpectralModel.index1
      ~BrokenPowerLawSpectralModel.index2
      ~BrokenPowerLawSpectralModel.is_norm_spectral_model
      ~BrokenPowerLawSpectralModel.parameters
      ~BrokenPowerLawSpectralModel.tag
      ~BrokenPowerLawSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~BrokenPowerLawSpectralModel.__call__
      ~BrokenPowerLawSpectralModel.copy
      ~BrokenPowerLawSpectralModel.create
      ~BrokenPowerLawSpectralModel.energy_flux
      ~BrokenPowerLawSpectralModel.energy_flux_error
      ~BrokenPowerLawSpectralModel.evaluate
      ~BrokenPowerLawSpectralModel.evaluate_error
      ~BrokenPowerLawSpectralModel.from_dict
      ~BrokenPowerLawSpectralModel.from_parameters
      ~BrokenPowerLawSpectralModel.integral
      ~BrokenPowerLawSpectralModel.integral_error
      ~BrokenPowerLawSpectralModel.inverse
      ~BrokenPowerLawSpectralModel.plot
      ~BrokenPowerLawSpectralModel.plot_error
      ~BrokenPowerLawSpectralModel.spectral_index
      ~BrokenPowerLawSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: ebreak
   .. autoattribute:: index1
   .. autoattribute:: index2
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
