docs/1.2/_sources/api/gammapy.modeling.models.BrokenPowerLawSpectralModel.rst.txt
BrokenPowerLawSpectralModel
===========================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: BrokenPowerLawSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~BrokenPowerLawSpectralModel.amplitude
      ~BrokenPowerLawSpectralModel.covariance
      ~BrokenPowerLawSpectralModel.default_parameters
      ~BrokenPowerLawSpectralModel.ebreak
      ~BrokenPowerLawSpectralModel.frozen
      ~BrokenPowerLawSpectralModel.index1
      ~BrokenPowerLawSpectralModel.index2
      ~BrokenPowerLawSpectralModel.is_norm_spectral_model
      ~BrokenPowerLawSpectralModel.parameters
      ~BrokenPowerLawSpectralModel.pivot_energy
      ~BrokenPowerLawSpectralModel.tag
      ~BrokenPowerLawSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~BrokenPowerLawSpectralModel.__call__
      ~BrokenPowerLawSpectralModel.copy
      ~BrokenPowerLawSpectralModel.energy_flux
      ~BrokenPowerLawSpectralModel.energy_flux_error
      ~BrokenPowerLawSpectralModel.evaluate
      ~BrokenPowerLawSpectralModel.evaluate_error
      ~BrokenPowerLawSpectralModel.freeze
      ~BrokenPowerLawSpectralModel.from_dict
      ~BrokenPowerLawSpectralModel.from_parameters
      ~BrokenPowerLawSpectralModel.integral
      ~BrokenPowerLawSpectralModel.integral_error
      ~BrokenPowerLawSpectralModel.inverse
      ~BrokenPowerLawSpectralModel.inverse_all
      ~BrokenPowerLawSpectralModel.plot
      ~BrokenPowerLawSpectralModel.plot_error
      ~BrokenPowerLawSpectralModel.reassign
      ~BrokenPowerLawSpectralModel.reference_fluxes
      ~BrokenPowerLawSpectralModel.spectral_index
      ~BrokenPowerLawSpectralModel.spectral_index_error
      ~BrokenPowerLawSpectralModel.to_dict
      ~BrokenPowerLawSpectralModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: ebreak
   .. autoattribute:: frozen
   .. autoattribute:: index1
   .. autoattribute:: index2
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: pivot_energy
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: inverse_all
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: reassign
   .. automethod:: reference_fluxes
   .. automethod:: spectral_index
   .. automethod:: spectral_index_error
   .. automethod:: to_dict
   .. automethod:: unfreeze
